v8/tests/messages/property-load-miss.out
property-load-miss.js:2: Uncaught TypeError: Cannot read property 'foo' of null
function get_foo(obj) { return obj.foo; }
                                  ^
